fix dark mode app jacobian

--- a/_static/app/jacobian/main.css
+++ b/_static/app/jacobian/main.css
@@ -31,80 +31,198 @@ div.app-jacobian svg{
   border:solid 1px;
 }
 
+/* Dark mode */
 @media (prefers-color-scheme: dark) {
+  body:not([data-theme="light"])
   div.app-jacobian{
     background-color: var(--dark_background_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian svg{
     border-color: var(--dark_stroke_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian div.title p[data-triangle="normal"]{
     color: var(--dark_title_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian div.title p[data-triangle="flat"]{
     color: var(--dark_title_flat_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian div.title p[data-triangle="flip"]{
     color: var(--dark_title_flip_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian svg polygon.d3_triangle{
     stroke: var(--dark_stroke_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian svg polygon.d3_triangle[data-triangle="normal"]{
     fill: var(--dark_triangle_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian svg polygon.d3_triangle[data-triangle="flat"]{
     fill: var(--dark_triangle_flat_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian svg polygon.d3_triangle[data-triangle="flip"]{
     fill: var(--dark_triangle_flip_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian g.vertices circle{
     stroke: var(--dark_stroke_color);
     fill: var(--dark_point_color);
   }
+  body:not([data-theme="light"])
   div.app-jacobian g.vertices text{
     fill: var(--dark_point_txt_color);
   }
 }
+body[data-theme="dark"]
+div.app-jacobian{
+  background-color: var(--dark_background_color);
+}
+body[data-theme="dark"]
+div.app-jacobian svg{
+  border-color: var(--dark_stroke_color);
+}
+body[data-theme="dark"]
+div.app-jacobian div.title p[data-triangle="normal"]{
+  color: var(--dark_title_color);
+}
+body[data-theme="dark"]
+div.app-jacobian div.title p[data-triangle="flat"]{
+  color: var(--dark_title_flat_color);
+}
+body[data-theme="dark"]
+div.app-jacobian div.title p[data-triangle="flip"]{
+  color: var(--dark_title_flip_color);
+}
+body[data-theme="dark"]
+div.app-jacobian svg polygon.d3_triangle{
+  stroke: var(--dark_stroke_color);
+}
+body[data-theme="dark"]
+div.app-jacobian svg polygon.d3_triangle[data-triangle="normal"]{
+  fill: var(--dark_triangle_color);
+}
+body[data-theme="dark"]
+div.app-jacobian svg polygon.d3_triangle[data-triangle="flat"]{
+  fill: var(--dark_triangle_flat_color);
+}
+body[data-theme="dark"]
+div.app-jacobian svg polygon.d3_triangle[data-triangle="flip"]{
+  fill: var(--dark_triangle_flip_color);
+}
+body[data-theme="dark"]
+div.app-jacobian g.vertices circle{
+  stroke: var(--dark_stroke_color);
+  fill: var(--dark_point_color);
+}
+body[data-theme="dark"]
+div.app-jacobian g.vertices text{
+  fill: var(--dark_point_txt_color);
+}
 
+/* Light mode */
 @media (prefers-color-scheme: light) {
+  body:not([data-theme="dark"])
   div.app-jacobian p{
     color: var(--light_foreground_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian{
     background-color: var(--light_background_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian svg{
     border-color: var(--light_stroke_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian div.title p[data-triangle="normal"]{
     color: var(--light_title_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian div.title p[data-triangle="flat"]{
     color: var(--light_title_flat_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian div.title p[data-triangle="flip"]{
     color: var(--light_title_flip_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian svg polygon.d3_triangle{
     stroke: var(--light_stroke_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian svg polygon.d3_triangle[data-triangle="normal"]{
     fill: var(--light_triangle_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian svg polygon.d3_triangle[data-triangle="flat"]{
     fill: var(--light_triangle_flat_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian svg polygon.d3_triangle[data-triangle="flip"]{
     fill: var(--light_triangle_flip_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian g.vertices circle{
     stroke: var(--light_stroke_color);
     fill: var(--light_point_color);
   }
+  body:not([data-theme="dark"])
   div.app-jacobian g.vertices text{
     fill: var(--light_point_txt_color);
   }
-
+}
+body[data-theme="light"]
+div.app-jacobian p{
+  color: var(--light_foreground_color);
+}
+body[data-theme="light"]
+div.app-jacobian{
+  background-color: var(--light_background_color);
+}
+body[data-theme="light"]
+div.app-jacobian svg{
+  border-color: var(--light_stroke_color);
+}
+body[data-theme="light"]
+div.app-jacobian div.title p[data-triangle="normal"]{
+  color: var(--light_title_color);
+}
+body[data-theme="light"]
+div.app-jacobian div.title p[data-triangle="flat"]{
+  color: var(--light_title_flat_color);
+}
+body[data-theme="light"]
+div.app-jacobian div.title p[data-triangle="flip"]{
+  color: var(--light_title_flip_color);
+}
+body[data-theme="light"]
+div.app-jacobian svg polygon.d3_triangle{
+  stroke: var(--light_stroke_color);
+}
+body[data-theme="light"]
+div.app-jacobian svg polygon.d3_triangle[data-triangle="normal"]{
+  fill: var(--light_triangle_color);
+}
+body[data-theme="light"]
+div.app-jacobian svg polygon.d3_triangle[data-triangle="flat"]{
+  fill: var(--light_triangle_flat_color);
+}
+body[data-theme="light"]
+div.app-jacobian svg polygon.d3_triangle[data-triangle="flip"]{
+  fill: var(--light_triangle_flip_color);
+}
+body[data-theme="light"]
+div.app-jacobian g.vertices circle{
+  stroke: var(--light_stroke_color);
+  fill: var(--light_point_color);
+}
+body[data-theme="light"]
+div.app-jacobian g.vertices text{
+  fill: var(--light_point_txt_color);
 }
